# deploy-de-apps-dados-no-docker

./: pyproject.toml
